--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "brcypt": "^1.0.1",
     "config": "^3.3.9",
     "express": "^4.18.2",
+    "joi": "^17.11.0",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "mongoose": "^8.0.3"
